# mono

./: .gitignore  DEV.md  Dockerfile.grpc-srvr  Makefile  README.md  buf.gen.yaml  docker-compose.yml  lefthook.yml  makefile
.github/workflows/: action.yml  deploy-dev.yml  deploy-qa.yml  grpc-srvr.yml  names.yml
data/: mysql-seed.sql  redis-seed.txt
go/: Makefile  gen-to-pkg.sh  go.mod  go.sum  makefile
go/cmd/grpc-srvr/: .gitignore  Makefile  README.md  attribute.go  config.go  config_test.go  main.go  sample.cfg  server.go  status.go  user.go
go/cmd/mono-grpc/: config.go  main.go
go/cmd/mrv-grpc/: attribute.go  config.go  config_test.go  main.go  makefile  server.go  status.go
go/internal/: datamgr.go
go/internal/attribute/: attribute.go  attribute.pb.go  attribute_grpc.pb.go  manager.go
go/internal/status/: status.go  status.pb.go  status_grpc.pb.go
go/internal/user/: manager.go  user.go
go/pkg/datastore/: Makefile  compose.test.yml  datastore.go  datastore_test.go  docker-compose.test.yml  makefile  mongo.go  mysql.go  postgres.go  redis.go
go/pkg/retry/: retry_test.go
proto/: attribute.proto  protoc-go.sh  protoc-py.sh  protoc.sh  status.proto
proto/attribute/v1/: attribute.proto
proto/redisdata/v1/: redisdata.proto
proto/status/v1/: status.proto
proto/user/v1/: user.proto
py/: Makefile  README.md  gen-to-pkg.sh  makefile
py/apps/mono-http/: Makefile  makefile  pyproject.toml
py/apps/mono-http/mono_http/: README.md  auth.py  main.py
py/apps/mono-http/tests/: test_mrv_http.py
py/apps/mrv-http/: makefile  pyproject.toml
py/apps/mrv-http/mrv_http/: foo.py  main.py
py/apps/mrv-http/tests/: test_mrv_http.py
py/pkg/attribute/: attribute_pb2.py  pyproject.toml
py/pkg/attribute-grpc/: pyproject.toml
py/pkg/attributev1/: pyproject.toml
py/pkg/hello/: pyproject.toml
py/pkg/hello-two/: pyproject.toml
py/pkg/status/: pyproject.toml  setup.py  status_pb2.py  status_pb2_grpc.py
py/pkg/status-grpc/: pyproject.toml
py/pkg/status-grpc/status_grpc/: main.py  status_pb2.py
py/pkg/status-grpc/tests/: test_status_grpc.py
py/pkg/statusv1/: pyproject.toml
web/auth/: app.js  auth_config.json  index.html  success.html
web/auth/api/: go.mod  (+1 more)
(+27 files in other folders)
