[tool.poetry]
name = "mono-http"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.73.0"
uvicorn = "^0.17.0"
grpcio = "^1.43.0"

attribute-grpc = { path = "../../pkg/attribute-grpc" }
status-grpc = { path = "../../pkg/status-grpc" }
protobuf = "^3.19.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
